--- a/src/ResourceManager/AzureStackAdmin/Commands.AzureStackAdmin/Commands.AzureStackAdmin.csproj
+++ b/src/ResourceManager/AzureStackAdmin/Commands.AzureStackAdmin/Commands.AzureStackAdmin.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\Package\Debug\ResourceManager\AzureResourceManager\AzureRM.AzureStackAdmin\</OutputPath>
+    <OutputPath>..\..\..\Stack\Debug\ResourceManager\AzureResourceManager\AzureRM.AzureStackAdmin\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -47,7 +47,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-<!--    <Reference Include="System" />
+    <!--    <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net" />
@@ -64,9 +64,13 @@
     <Reference Include="System.XML" /> 
     <Reference Include="System.Xml.Linq" /> -->
     <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" /> 
+    <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.AzureStack.Management">
       <HintPath>..\..\..\packages\Microsoft.AzureStack.Management.0.10.9-preview\lib\net45\Microsoft.AzureStack.Management.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Clients.ActiveDirectory">
+      <HintPath>$(LibraryNugetPackageFolder)\Microsoft.IdentityModel.Clients.ActiveDirectory.2.28.3\lib\net45\Microsoft.IdentityModel.Clients.ActiveDirectory.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
