--- a/src/ResourceManager/KeyVault/2015-06-01/Commands.KeyVault/Commands.KeyVault.csproj
+++ b/src/ResourceManager/KeyVault/2015-06-01/Commands.KeyVault/Commands.KeyVault.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -21,7 +21,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\Package\Debug\ResourceManager\AzureResourceManager\AzureRM.KeyVault</OutputPath>
+    <OutputPath>..\..\..\..\Package\Debug\ResourceManager\AzureResourceManager\AzureRM.KeyVault</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -32,7 +32,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>MSSharedLibKey.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
-    <OutputPath>..\..\..\Package\Release\ResourceManager\AzureResourceManager\AzureRM.KeyVault</OutputPath>
+    <OutputPath>..\..\..\..\Package\Release\ResourceManager\AzureResourceManager\AzureRM.KeyVault</OutputPath>
     <DefineConstants>TRACE;SIGN</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -51,69 +51,21 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Commands\AddAzureKeyVaultCertificate.cs" />
-    <Compile Include="Commands\BackupAzureKeyVaultSecret.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\GetAzureKeyVaultManagedStorageAccount.cs" />
-    <Compile Include="Commands\RestoreAzureKeyVaultSecret.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\GetAzureKeyVaultManagedStorageSasDefinition.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\UpdateAzureKeyVaultManagedStorageAccountKey.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\RemoveAzureKeyVaultManagedStorageAccount.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\RemoveAzureKeyVaultManagedStorageSasDefinition.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SasDefinitionParameterConstants.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\AddAzureKeyVaultManagedStorageAccount.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\UpdateAzureKeyVaultManagedStorageAccount.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Account.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Service.Container.Blob.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Service.Container.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Service.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Service.Queue.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Service.Share.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Service.Share.File.cs" />
-    <Compile Include="Commands\ManagedStorageAccounts\SetAzureKeyVaultManagedStorageSasDefinition.Service.Table.cs" />
-    <Compile Include="Commands\SetAzureKeyVaultCertificateAttribute.cs" />
-    <Compile Include="Commands\StopAzureKeyVaultCertificateOperation.cs" />
-    <Compile Include="Commands\GetAzureKeyVaultCertificateOperation.cs" />
-    <Compile Include="Commands\ImportAzureKeyVaultCertificate.cs" />
-    <Compile Include="Commands\AddAzureKeyVaultCertificateContact.cs" />
-    <Compile Include="Commands\GetAzureKeyVaultCertificate.cs" />
-    <Compile Include="Commands\GetAzureKeyVaultCertificateContact.cs" />
-    <Compile Include="Commands\GetAzureKeyVaultCertificateIssuer.cs" />
-    <Compile Include="Commands\GetAzureKeyVaultCertificatePolicy.cs" />
-    <Compile Include="Commands\NewAzureKeyVaultCertificateAdministratorDetails.cs" />
-    <Compile Include="Commands\NewAzureKeyVaultCertificatePolicy.cs" />
-    <Compile Include="Commands\NewAzureKeyVaultCertificateOrganizationDetails.cs" />
-    <Compile Include="Commands\RemoveAzureKeyVaultCertificate.cs" />
-    <Compile Include="Commands\RemoveAzureKeyVaultCertificateContact.cs" />
-    <Compile Include="Commands\RemoveAzureKeyVaultCertificateIssuer.cs" />
-    <Compile Include="Commands\RemoveAzureKeyVaultCertificateOperation.cs" />
-    <Compile Include="Commands\SetAzureKeyVaultCertificateIssuer.cs" />
-    <Compile Include="Commands\SetAzureKeyVaultCertificatePolicy.cs" />
-    <Compile Include="Commands\UndoAzureKeyVaultRemoval.cs" />
-    <Compile Include="Commands\UndoAzureKeyVaultKeyRemoval.cs" />
-    <Compile Include="Commands\UndoAzureKeyVaultSecretRemoval.cs" />
-    <Compile Include="Models\PSDeletedVault.cs" />
-    <Compile Include="Models\CertificateIdentityItem.cs" />
+    <Compile Include="Customization\AccessPolicyEntry.cs" />
+    <Compile Include="Generated\IKeyVaultManagementClient.cs" />
+    <Compile Include="Generated\IVaultOperations.cs" />
+    <Compile Include="Generated\KeyVaultManagementClient.cs" />
+    <Compile Include="Generated\KeyVaultManagementClientExtensions.cs" />
+    <Compile Include="Generated\ResourceBase.cs" />
+    <Compile Include="Generated\Sku.cs" />
+    <Compile Include="Generated\Vault.cs" />
+    <Compile Include="Generated\VaultCreateOrUpdateParameters.cs" />
+    <Compile Include="Generated\VaultGetResponse.cs" />
+    <Compile Include="Generated\VaultListResponse.cs" />
+    <Compile Include="Generated\VaultOperations.cs" />
+    <Compile Include="Generated\VaultOperationsExtensions.cs" />
+    <Compile Include="Generated\VaultProperties.cs" />
     <Compile Include="Commands\Constants.cs" />
-    <Compile Include="Models\CertificateIssuerIdentityItem.cs" />
-    <Compile Include="Models\DeletedKeyBundle.cs" />
-    <Compile Include="Models\DeletedKeyIdentityItem.cs" />
-    <Compile Include="Models\DeletedSecret.cs" />
-    <Compile Include="Models\DeletedSecretIdentityItem.cs" />
-    <Compile Include="Models\KeyVaultCertificate.cs" />
-    <Compile Include="Models\KeyVaultCertificateAdministratorDetails.cs" />
-    <Compile Include="Models\KeyVaultCertificateContact.cs" />
-    <Compile Include="Models\KeyVaultCertificateIssuer.cs" />
-    <Compile Include="Models\KeyVaultCertificateOperation.cs" />
-    <Compile Include="Models\KeyVaultCertificateOrganizationDetails.cs" />
-    <Compile Include="Models\KeyVaultCertificatePolicy.cs" />
-    <Compile Include="Models\ManagedStorageAccounts\ManagedStorageAccount.cs" />
-    <Compile Include="Models\ManagedStorageAccounts\ManagedStorageAccountAttributes.cs" />
-    <Compile Include="Models\ManagedStorageAccounts\ManagedStorageAccountListItem.cs" />
-    <Compile Include="Models\ManagedStorageAccounts\ManagedStorageSasDefinition.cs" />
-    <Compile Include="Models\ManagedStorageAccounts\ManagedStorageSasDefinitionAttributes.cs" />
-    <Compile Include="Models\ManagedStorageAccounts\ManagedStorageSasDefinitionListItem.cs" />
-    <Compile Include="Models\ManagedStorageAccounts\ManagedStorageSasDefinitiontFilterOptions.cs" />
     <Compile Include="Models\VaultManagementClient.cs" />
     <Compile Include="Models\ModelExtensions.cs" />
     <Compile Include="Models\PSVault.cs" />
@@ -175,39 +127,51 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Azure.ActiveDirectory.GraphClient">
-      <HintPath>..\..\..\packages\Microsoft.Azure.ActiveDirectory.GraphClient.2.1.0\lib\portable-net4+sl5+win+wpa+wp8\Microsoft.Azure.ActiveDirectory.GraphClient.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Microsoft.Azure.ActiveDirectory.GraphClient.2.1.0\lib\portable-net4+sl5+win+wpa+wp8\Microsoft.Azure.ActiveDirectory.GraphClient.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Azure.KeyVault, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.Azure.KeyVault.2.3.0-preview\lib\net452\Microsoft.Azure.KeyVault.dll</HintPath>
+    <Reference Include="Microsoft.Azure.KeyVault, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Azure.KeyVault.1.0.0\lib\net45\Microsoft.Azure.KeyVault.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Azure.KeyVault.WebKey, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.Azure.KeyVault.WebKey.2.0.6\lib\net452\Microsoft.Azure.KeyVault.WebKey.dll</HintPath>
+    <Reference Include="Microsoft.Azure.ResourceManager, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Azure.Management.Resources.2.18.14-preview\lib\net40\Microsoft.Azure.ResourceManager.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Azure.Management.KeyVault, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.KeyVault.2.3.0-preview\lib\net452\Microsoft.Azure.Management.KeyVault.dll</HintPath>
+  <!--  <Reference Include="Microsoft.Azure.KeyVault.WebKey, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Azure.KeyVault.WebKey.2.0.6\lib\net452\Microsoft.Azure.KeyVault.WebKey.dll</HintPath>
       <Private>True</Private>
-    </Reference>
+    </Reference>-->
+    <!--<Reference Include="Microsoft.Azure.Management.KeyVault, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Azure.Management.KeyVault.2.3.0-preview\lib\net452\Microsoft.Azure.Management.KeyVault.dll</HintPath>
+      <Private>True</Private>
+    </Reference>-->
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Security" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication.Abstractions\Commands.Common.Authentication.Abstractions.csproj">
+    <ProjectReference Include="..\..\..\..\Common\Commands.Common.Authentication.Abstractions\Commands.Common.Authentication.Abstractions.csproj">
       <Project>{70527617-7598-4aef-b5bd-db9186b8184b}</Project>
       <Name>Commands.Common.Authentication.Abstractions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\Commands.Common.Graph.RBAC\Commands.Common.Graph.RBAC.csproj">
+    <ProjectReference Include="..\..\..\..\Common\Commands.Common.Graph.RBAC\Commands.Common.Graph.RBAC.csproj">
       <Project>{269acf73-0a34-42dc-ab9c-4b15931a489d}</Project>
       <Name>Commands.Common.Graph.RBAC</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\Commands.Common\Commands.Common.csproj">
+    <ProjectReference Include="..\..\..\..\Common\Commands.Common\Commands.Common.csproj">
       <Project>{5ee72c53-1720-4309-b54b-5fb79703195f}</Project>
       <Name>Commands.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\Commands.ResourceManager.Common\Commands.ResourceManager.Common.csproj">
+    <ProjectReference Include="..\..\..\Common\Commands.ResourceManager.Common\Commands.ResourceManager.Common.csproj">
       <Project>{3819d8a7-c62c-4c47-8ddd-0332d9ce1252}</Project>
       <Name>Commands.ResourceManager.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Resources\Commands.Resources\Commands.Resources.csproj">
+      <Project>{e1f5201d-6067-430e-b303-4e367652991b}</Project>
+      <Name>Commands.Resources</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Tags\Commands.Tags\Commands.Tags.csproj">
+      <Project>{2493a8f7-1949-4f29-8d53-9d459046c3b8}</Project>
+      <Name>Commands.Tags</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -218,18 +182,18 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\..\..\tools\Common.Dependencies.targets" />
+  <Import Project="..\..\..\..\..\tools\Common.Dependencies.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
       <MarkdownFiles Include="$(ProjectDir)help\*.*" />
     </ItemGroup>
     <Copy SourceFiles="@(MarkdownFiles)" DestinationFolder="$(OutputPath)\help\" ContinueOnError="false" />
   </Target>
-  <Import Project="..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
+  <Import Project="..\..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
   </Target>
 </Project>
